# conxian-nexus

./: .dockerignore  .env.example  .gitignore  .gitmodules  AGENTS.md  CHANGELOG.md  CODEOWNERS  CONTRIBUTING.md  Cargo.toml  Dockerfile  LICENSE  README.md  RELEASE.md  REPO_OWNERSHIP.md  SECURITY.md  SUPPORT.md  build.rs  changelog_fix.txt  docker-compose.yml  fix_coverage_v2.py  fix_sync_warnings.py  full_audit_dump.txt  readme_fix.txt  update_main_v3.py  update_settlement.py
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md
.github/workflows/: cargo-audit.yml  codeql.yml  dependency-review.yml  neon_workflow.yml  release.yml  rust.yml
contracts/: nexus_anchor.clar
docs/: ADMIN_API_V1.md  ADR-006_Tier1_Chain_Families.md  BIP110_ALIGNMENT.md  CHAIN_SUPPORT_BOUNDARIES.md  CONTROL_MODEL.md  GAP_ANALYSIS.md  LIGHTNING_RESILIENCE_LAYER.md  MAINNET_EVIDENCE.md  NIP-004_Cryptographic_Dual_Signatures.md  NIP-005_Real_MultiChain_Verification.md  NIP-006_Admin_Token_Hardening.md  NIP-007_Safety_Mode_Enforcement.md  PORTFOLIO_INVENTORY.md  PRD.md  PRODUCTION_REVIEW_END_OF_SPRINT.md  RELEASE.md  REPO_OWNERSHIP.md  RESEARCH.md  SAB_MIGRATION_NEXUS.md  SETTLEMENT_INGRESS.md  SUPPORT.md  bitcoin-coverage.md  enhancements_summary.md  kwil_pilot_schema.sql  lightning-coverage.md  openapi.yaml  v0.4.18_PREP.md
docs/remediation/: CON-1200_Clarity4_Verification.md  CON-1202_Production_Controls.md  HOLE_REPORT.md  OBSERVABILITY_RUNBOOK.md  SECURITY_HARDENING.md
lib-conxian-core/: .gitignore  Cargo.toml  README.md  test_output.txt
lib-conxian-core/src/: lib.rs
migrations/: 20240101000000_init.sql  20240101000001_enhance.sql  20240101000002_add_sender.sql  20240101000003_state_roots.sql  20240101000004_mmr_peaks.sql  20240101000005_mev_audit.sql  20240101000006_oracle_history.sql  20240101000007_mmr_nodes.sql  20260407000000_settlement_proposals.sql  20260410000000_external_settlement_logs.sql  20260424000000_bos_supply_chain_schema.sql  20260601000000_add_oracle_confidence.sql  20260613000000_multi_chain_audit.sql  20260621000000_evm_cosmos_audit.sql  20260624000000_expand_mev_audit.sql  20260627000000_update_bitvm_audit.sql  20260630000000_lightning_recovery.sql
proto/: nexus.proto
scripts/: check_bitcoin_coverage.py  check_lightning_coverage.py  check_production_boundary.sh  coverage_bitcoin.sh  verify_contamination_guard.py  verify_contracts.sh  verify_submodule_integrity.py
src/: config.rs  lib.rs  main.rs  metrics.rs  orchestrator.rs
src/api/: admin.rs  analytics.rs  dlc.rs  erp.rs  grpc.rs  identity.rs  mod.rs  rest.rs  security.rs  services.rs  settlement.rs  zkml.rs
src/api/billing/: mod.rs  nostr.rs
src/executor/: bitvm.rs  cosmos.rs  evm.rs  fedimint.rs  lightning.rs  mod.rs  rgb.rs  stacks.rs
src/oracle/: aggregator.rs  mod.rs  ppp_tracker.rs
src/safety/: mod.rs
src/state/: mod.rs
src/storage/: kwil.rs  mod.rs  tableland.rs
src/sync/: bip110.rs  mod.rs
tests/: admin_api_test.rs  api_test.rs  billing_test.rs  bitcoin_test.rs  bitvm_test.rs  bitvm_verification_test.rs  cosmos_test.rs  evm_test.rs  executor_hardening_test.rs  fedimint_test.rs  integration_test.rs  kwil_test.rs  lightning_recovery_test.rs  lightning_resilience_test.rs  lightning_test.rs  mmr_proof_api_test.rs  rgb_adapter_test.rs  settlement_test.rs  stacks_adapter_test.rs  storage_boundary_test.rs
