[package]
name = "conxian-nexus"
version = "0.4.17"
rust-version = "1.82"
edition = "2021"

[dependencies]
tokio = { version = "1.43", features = ["full"] }
axum = { version = "0.8", features = ["macros"] }
sqlx = { version = "0.9", features = ["runtime-tokio", "tls-rustls", "postgres", "chrono"] }
redis = { version = "1.3", features = ["tokio-comp"] }
tonic = "0.14"
tonic-prost = "0.14"
prost = "0.14"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
anyhow = "1.0"
sha2 = "0.11"
hmac = "0.13"
rand = "0.10"
hex = "0.4"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
dotenvy = "0.15"
tower-http = { version = "0.7", features = ["cors", "trace"] }
futures-util = "0.3"
lib-conxian-core = { git = "https://github.com/Conxian/lib-conxian-core", rev = "3b091d2700d840514427e4190c40d631b6d8132c" }
prometheus = "0.14"
lazy_static = "1.4"
reqwest = { version = "0.13", features = ["json"] }
tokio-tungstenite = { version = "0.29", features = ["rustls-tls-native-roots"] }
url = "2.5"
http-body-util = "0.1"
tower = "0.5"
opentelemetry = "0.32"
opentelemetry_sdk = { version = "0.32", features = ["rt-tokio"] }
opentelemetry-otlp = { version = "0.32", features = ["grpc-tonic", "tokio"] }
tracing-opentelemetry = "0.33"
uuid = { version = "1.23.0", features = ["v4"] }
nostr-sdk = "0.44"
k256 = { version = "0.13.4", features = ["ecdsa", "sha256"] }
ark-groth16 = "0.6.0"
ark-serialize = "0.6.0"
ark-bls12-381 = "0.6.0"
ark-crypto-primitives = { version = "0.6.0", features = ["snark"] }
ark-ff = "0.6.0"
ark-relations = "0.6.0"
ark-std = "0.6.0"

[build-dependencies]
tonic-prost-build = "0.14"
protoc-bin-vendored = "3.0"
