[package]
name = "lib-conxian-core"
version = "0.1.0"
edition = "2024"

[dependencies]
k256 = { version = "0.13", features = ["ecdsa", "sha256"] }
rand = "0.8"
hex = "0.4"
sha2 = "0.10"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tiny-bip39 = "1.0"
anyhow = "1.0"
bip32 = "0.5"
ripemd = "0.1"
lazy_static = "1.4"
